--- a/APIDocumentation/lnhpd-documentation-en.html
+++ b/APIDocumentation/lnhpd-documentation-en.html
@@ -180,8 +180,7 @@
                         <h2 id="a1">Introduction</h2>
                         <p>The Licensed Natural Health Products Database (LNHPD) contains information about natural health products (NHPs) that have been issued a product licence by Health Canada.</p>
                         <p>This Application Programming Interface (API) allows developers to access that information in JSON and XML format for reuse in their own applications.
-                        The base URI for the Licensed Natural Health Products Database&nbsp;<a href="https://health-products.canada.ca/api/natural-licences/">https://health-products.canada.ca/api/natural-licences/</a> and you can add parameters to it. Any requests are made relative to this URI.</p>
-                        <p>Information is also available in CSV format, use that URI&nbsp;<a href="https://health-products.canada.ca/api/documentation/lnhpd-dataset-en.html">https://health-products.canada.ca/api/documentation/lnhpd-dataset-en</a> to see the available options.</p>
+                        The base URI for the Licensed Natural Health Products Database&nbsp;<a href="https://health-products.canada.ca/api/natural-licences/">https://health-products.canada.ca/api/natural-licences/</a> and you can add parameters to it. Any requests are made relative to this URI.</p>                        
                     </section>
                     <!-- Introduction end -->
                     <!-- Medicinal INGREDIENT start -->
@@ -317,10 +316,10 @@
                         </section>
                         <section>
                             <h3 id="a2.3">Sample response</h3>
-                            <pre class="prettify prettyprint linenums">[{"lnhpd_id":100124,"ingredient_name":"Calcium","potency_amount":0,"potency_constituent":"","potency_unit_of_measure":"",
+                            <pre class="prettify prettyprint linenums">[{"lnhpd_id":3894852,"ingredient_name":"Calcium","potency_amount":0,"potency_constituent":"","potency_unit_of_measure":"",
         "quantity":667,"quantity_minimum":0,"quantity_maximum":0,"quantity_unit_of_measure":"mg","ratio_numerator":"",
         "ratio_denominator":"","dried_herb_equivalent":"","dhe_unit_of_measure":"","extract_type_desc":"","source_material":""},
- {"lnhpd_id":100124,"ingredient_name":"Vitamin D3","potency_amount":0,"potency_constituent":"","potency_unit_of_measure":"",
+ {"lnhpd_id":3894852,"ingredient_name":"Vitamin D3","potency_amount":0,"potency_constituent":"","potency_unit_of_measure":"",
         "quantity":7,"quantity_minimum":0,"quantity_maximum":0,"quantity_unit_of_measure":"mcg","ratio_numerator":"",
         "ratio_denominator":"","dried_herb_equivalent":"","dhe_unit_of_measure":"","extract_type_desc":"","source_material":""}]</pre>
                         </section>
@@ -436,13 +435,13 @@
                         </section>
                         <section>
                             <h3 id="a3.3">Sample response</h3>
-                            <pre class="prettify prettyprint linenums">[{"lnhpd_id":100124,"ingredient_name":"Annatto"},
-    {"lnhpd_id":100124,"ingredient_name":"Artificial Orange Flavor"},
-    {"lnhpd_id":100124,"ingredient_name":"Cellulose"},
-    {"lnhpd_id":100124,"ingredient_name":"Dextrose"},
-    {"lnhpd_id":100124,"ingredient_name":"Fructose"},
-    {"lnhpd_id":100124,"ingredient_name":"Magnesium Stearate"},
-    {"lnhpd_id":100124,"ingredient_name":"Stearic Acid"}]</pre>
+                            <pre class="prettify prettyprint linenums">[{"lnhpd_id":3894852,"ingredient_name":"Annatto"},
+    {"lnhpd_id":3894852,"ingredient_name":"Artificial Orange Flavor"},
+    {"lnhpd_id":3894852,"ingredient_name":"Cellulose"},
+    {"lnhpd_id":3894852,"ingredient_name":"Dextrose"},
+    {"lnhpd_id":3894852,"ingredient_name":"Fructose"},
+    {"lnhpd_id":3894852,"ingredient_name":"Magnesium Stearate"},
+    {"lnhpd_id":3894852,"ingredient_name":"Stearic Acid"}]</pre>
                         </section>
                         <section>
                             <h3 id="a3.4">jQuery example</h3>
@@ -842,7 +841,7 @@
                         </section>
                         <section>
                             <h3 id="a6.3">Sample response</h3>
-                            <pre class="prettify prettyprint linenums">{"lnhpd_id":100485,"dose_id":5884617,"population_type_desc":"Adults","age":0,"age_minimum":0,"age_maximum":0,"uom_type_desc_age":"",
+                            <pre class="prettify prettyprint linenums">{"lnhpd_id":3908931,"dose_id":5884617,"population_type_desc":"Adults","age":0,"age_minimum":0,"age_maximum":0,"uom_type_desc_age":"",
     "quantity_dose":2,"quantity_dose_minimum":0,"quantity_dose_maximum":0,"uom_type_desc_quantity_dose":"tablet","frequency":1,
     "frequency_minimum":0,"frequency_maximum":0,"uom_type_desc_frequency":"daily"}</pre>
                         </section>
@@ -1021,7 +1020,7 @@
                         </section>
                         <section>
                             <h3 id="a7.3">Sample response</h3>
-                            <pre class="prettify prettyprint linenums">{"lnhpd_id":100126,"licence_number":"02096870","licence_date":"2004-10-15","revised_date":null,"time_receipt":"2004-01-13",
+                            <pre class="prettify prettyprint linenums">{"lnhpd_id":3894930,"licence_number":"02096870","licence_date":"2004-10-15","revised_date":null,"time_receipt":"2004-01-13",
     "date_start":"2004-01-19","notes":"See file OF2-31-3-10152-1 Company general file for heavy metals testing. LC","product_name_id":170030,
     "product_name":"Primanol","dosage_form":"Capsule","company_id":10152,"company_name_id":9141709,"company_name":"Jamieson Laboratories Ltd.",
     "sub_submission_type_code":5,"sub_submission_type_desc":"Transitional DIN","flag_primary_name":1,"flag_product_status":1,"flag_attested_monograph":0}</pre>
@@ -1142,7 +1141,7 @@
                         </section>
                         <section>
                             <h3 id="a8.3">Sample response</h3>
-                            <pre class="prettify prettyprint linenums">{"text_id":67880,"lnhpd_id":101058,"purpose":"Helps to rebuild cartilage and aids to relieve osteoarthritic symptoms and joint pain."}</pre>
+                            <pre class="prettify prettyprint linenums">{"text_id":67880,"lnhpd_id":3931278,"purpose":"Helps to rebuild cartilage and aids to relieve osteoarthritic symptoms and joint pain."}</pre>
                         </section>
                         <section>
                             <h3 id="a8.4">jQuery example</h3>
@@ -1268,7 +1267,7 @@
                         </section>
                         <section>
                             <h3 id="a9.3">Sample response</h3>
-                            <pre class="prettify prettyprint linenums">{"lnhpd_id":100494,"risk_id":3933447,"risk_type_desc":"Cautions and Warnings","sub_risk_type_desc":"",
+                            <pre class="prettify prettyprint linenums">{"lnhpd_id":3909282,"risk_id":3933447,"risk_type_desc":"Cautions and Warnings","sub_risk_type_desc":"",
     "risk_text":"Consult a health care practitioner prior to use if you are pregnant or breastfeeding. Consult a health care practitioner if symptoms worsen."}</pre>
                         </section>
                         <section>
@@ -1387,7 +1386,7 @@
                         </section>
                         <section>
                             <h3 id="a10.3">Sample response</h3>
-                            <pre class="prettify prettyprint linenums">{"lnhpd_id":100126,"route_id":170060,"route_type_desc":"Oral"}</pre>
+                            <pre class="prettify prettyprint linenums">{"lnhpd_id":3894930,"route_id":170060,"route_type_desc":"Oral"}</pre>
                         </section>
                         <section>
                             <h3 id="a10.4">jQuery example</h3>
