--- a/APIDocumentation/lnhpd-documentation-fr.html
+++ b/APIDocumentation/lnhpd-documentation-fr.html
@@ -178,8 +178,7 @@
                         <h2 id="a1">Introduction</h2>
                         <p>La Base de données des produits de santé naturels homologués (BDPSNH) contient des renseignements sur les produits de santé naturels (PSN) ayant reçu une licence de mise en marché de Santé Canada.</p>
                         <p>Cette interface de programmation d'applications (API) permet aux concepteurs d'accéder à ces renseignements en format JSON et XML afin de les utiliser dans leurs propres applications.
-                        L'adresse URI de base sur la Base de donnée de produits de santé naturels homologués (BDPSNH) est&nbsp;<a href="https://produits-sante.canada.ca/api/homologations-naturel/">https://produits-sante.canada.ca/api/homologations-naturel/</a> et vous pouvez y ajouter des paramètres. Toute requête est effectuée par l'entremise de cette adresse URI.</p>
-                        <p>Ces renseignements sont aussi disponibles en format CSV pour voir les options disponibles vous devez utiliser l'adresse URI suivante&nbsp;<a href="https://produits-sante.canada.ca/api/documentation/lnhpd-dataset-fr.html">https://produits-sante.canada.ca/api/documentation/lnhpd-dataset-fr</a>.</p>
+                        L'adresse URI de base sur la Base de donnée de produits de santé naturels homologués (BDPSNH) est&nbsp;<a href="https://produits-sante.canada.ca/api/homologations-naturel/">https://produits-sante.canada.ca/api/homologations-naturel/</a> et vous pouvez y ajouter des paramètres. Toute requête est effectuée par l'entremise de cette adresse URI.</p>                       
                     </section>
                     <!-- Intoduction end -->
                     <!-- INGREDIENT start -->
@@ -315,10 +314,10 @@
                         </section>
                         <section>
                              <h3 id="a2.3">Exemple de résultat </h3>
-                             <pre class="prettify prettyprint linenums">[{"lnhpd_id":100124,"ingredient_name":"Calcium","potency_amount":0,"potency_constituent":"","potency_unit_of_measure":"",
+                             <pre class="prettify prettyprint linenums">[{"lnhpd_id":3894852,"ingredient_name":"Calcium","potency_amount":0,"potency_constituent":"","potency_unit_of_measure":"",
     "quantity":667,"quantity_minimum":0,"quantity_maximum":0,"quantity_unit_of_measure":"mg","ratio_numerator":"","ratio_denominator":"",
     "dried_herb_equivalent":"","dhe_unit_of_measure":"","extract_type_desc":"","source_material":""},
-  {"lnhpd_id":100124,"ingredient_name":"Vitamine D3","potency_amount":0,"potency_constituent":"","potency_unit_of_measure":"",
+  {"lnhpd_id":3894852,"ingredient_name":"Vitamine D3","potency_amount":0,"potency_constituent":"","potency_unit_of_measure":"",
     "quantity":7,"quantity_minimum":0,"quantity_maximum":0,"quantity_unit_of_measure":"mcg","ratio_numerator":"","ratio_denominator":"",
     "dried_herb_equivalent":"","dhe_unit_of_measure":"","extract_type_desc":"","source_material":""}]</pre>
                         </section>
@@ -434,13 +433,13 @@
                         </section>
                         <section>
                              <h3 id="a3.3">Exemple de résultat </h3>
-                             <pre class="prettify prettyprint linenums">[{"lnhpd_id":100124,"ingredient_name":"Rocou"},
-    {"lnhpd_id":100124,"ingredient_name":"Artificial Orange Flavor"},
-    {"lnhpd_id":100124,"ingredient_name":"cellulose"},
-    {"lnhpd_id":100124,"ingredient_name":"Dextrose"},
-    {"lnhpd_id":100124,"ingredient_name":"Fructose"},
-    {"lnhpd_id":100124,"ingredient_name":"Stéarate de magnésium"},
-    {"lnhpd_id":100124,"ingredient_name":"Acide stéarique"}]</pre>
+                             <pre class="prettify prettyprint linenums">[{"lnhpd_id":3894852,"ingredient_name":"Rocou"},
+    {"lnhpd_id":3894852,"ingredient_name":"Artificial Orange Flavor"},
+    {"lnhpd_id":3894852,"ingredient_name":"cellulose"},
+    {"lnhpd_id":3894852,"ingredient_name":"Dextrose"},
+    {"lnhpd_id":3894852,"ingredient_name":"Fructose"},
+    {"lnhpd_id":3894852,"ingredient_name":"Stéarate de magnésium"},
+    {"lnhpd_id":3894852,"ingredient_name":"Acide stéarique"}]</pre>
                         </section>
                         <section>
                              <h3 id="a3.4">Exemple de jQuery</h3>
@@ -845,7 +844,7 @@
                         </section>
                         <section>
                              <h3 id="a6.3">Exemple de résultat </h3>
-                             <pre class="prettify prettyprint linenums">{"lnhpd_id":100502,"dose_id":36781,"population_type_desc":"Adultes","age":0,"age_minimum":0,"age_maximum":0,"uom_type_desc_age":"",
+                             <pre class="prettify prettyprint linenums">{"lnhpd_id":3909594,"dose_id":36781,"population_type_desc":"Adultes","age":0,"age_minimum":0,"age_maximum":0,"uom_type_desc_age":"",
     "quantity_dose":2,"quantity_dose_minimum":0,"quantity_dose_maximum":0,"uom_type_desc_quantity_dose":"Capsule",
     "frequency":2,"frequency_minimum":0,"frequency_maximum":0,"uom_type_desc_frequency":"Tous les jours"}</pre>
                         </section>
@@ -1025,7 +1024,7 @@
                         </section>
                         <section>
                              <h3 id="a7.3">Exemple de résultat </h3>
-                             <pre class="prettify prettyprint linenums">{"lnhpd_id":100126,"licence_number":"02096870","licence_date":"2004-10-15","revised_date":null,"time_receipt":"2004-01-13",
+                             <pre class="prettify prettyprint linenums">{"lnhpd_id":3894930,"licence_number":"02096870","licence_date":"2004-10-15","revised_date":null,"time_receipt":"2004-01-13",
     "date_start":"2004-01-19","notes":"See file OF2-31-3-10152-1 Company general file for heavy metals testing. LC","product_name_id":170030,
     "product_name":"Primanol","dosage_form":"Capsule","company_id":10152,"company_name_id":9141709,"company_name":"Jamieson Laboratories Ltd.",
     "sub_submission_type_code":5,"sub_submission_type_desc":"DIN de transition","flag_primary_name":1,"flag_product_status":1,"flag_attested_monograph":0}</pre>
@@ -1146,7 +1145,7 @@
                         </section>
                         <section>
                              <h3 id="a8.3">Exemple de résultat </h3>
-                             <pre class="prettify prettyprint linenums">{"text_id":109294,"lnhpd_id":100547,"purpose":"Pour la réduction des triglycérides et pour maintenir la santé cardiovasculaire."}</pre>
+                             <pre class="prettify prettyprint linenums">{"text_id":109294,"lnhpd_id":3911349,"purpose":"Pour la réduction des triglycérides et pour maintenir la santé cardiovasculaire."}</pre>
                         </section>
                         <section>
                              <h3 id="a8.4">Exemple de jQuery</h3>
@@ -1272,7 +1271,7 @@
                         </section>
                         <section>
                              <h3 id="a9.3">Exemple de résultat </h3>
-                             <pre class="prettify prettyprint linenums">{"lnhpd_id":100494,"risk_id":3933447,"risk_type_desc":"Précautions et mises en garde","sub_risk_type_desc":"","risk_text":"S.O."}</pre>
+                             <pre class="prettify prettyprint linenums">{"lnhpd_id":3909282,"risk_id":3933447,"risk_type_desc":"Précautions et mises en garde","sub_risk_type_desc":"","risk_text":"S.O."}</pre>
                         </section>
                         <section>
                              <h3 id="a9.4">Exemple de jQuery</h3>
@@ -1390,7 +1389,7 @@
                         </section>
                         <section>
                              <h3 id="a10.3">Exemple de résultat </h3>
-                             <pre class="prettify prettyprint linenums">{"lnhpd_id":100126,"route_id":170060,"route_type_desc":"Orale"}</pre>
+                             <pre class="prettify prettyprint linenums">{"lnhpd_id":3894930,"route_id":170060,"route_type_desc":"Orale"}</pre>
                         </section>
                         <section>
                              <h3 id="a10.4">Exemple de jQuery</h3>
