--- a/APIDocumentation/summary-report-documentation-fr.html
+++ b/APIDocumentation/summary-report-documentation-fr.html
@@ -121,8 +121,8 @@
                         <h2 id="a1">Introduction</h2>
                         <p>Le site internet, Registre des médicaments et des produits de santé, regroupe l’information au sujet des licences de produit, des inspections, de l’achat et de l’utilisation sécuritaire des produits, des effets secondaires, des rappels et des plaintes.</p>
                         <p>Cette interface de programmation d'applications (API) permet aux concepteurs d'accéder à ces renseignements en format JSON et XML afin de les utiliser dans leurs propres applications.
-                        L'adresse URI de base sur les rapports sommaires est &nbsp;<a href="https://produits-sante.canada.ca/api/rapports-sommaires/api/">https://produits-sante.canada.ca/api/rapports-sommaires/api/</a> et vous pouvez y ajouter des paramètres. Toute requête est effectuée par l'entremise de cette adresse URI.</p>
-                        <p>Ces renseignements sont aussi disponibles en format CSV pour voir les options disponibles vous devez utiliser l'adresse URI suivante&nbsp;<a href="https://produits-sante.canada.ca/api/documentation/summary-report-dataset-fr.html">https://produits-sante.canada.ca/api/documentation/summary-report-dataset-fr</a>.</p>
+                            L'adresse URI de base sur les rapports sommaires est &nbsp;<a href="https://produits-sante.canada.ca/api/rapports-sommaires/api/">https://produits-sante.canada.ca/api/rapports-sommaires/api/</a> et vous pouvez y ajouter des paramètres. Toute requête est effectuée par l'entremise de cette adresse URI.
+                        </p>                        
                     </section>
                     <!--Summary Basis of Decision-section-start-->
                     <section>
