--- a/APIDocumentation/noc-documentation-en.html
+++ b/APIDocumentation/noc-documentation-en.html
@@ -164,8 +164,7 @@
                         <p>The database is updated nightly and contains NOC information on human drugs from January 1, 1994 to date. It also contains NOC information on Veterinary drugs from September 19, 2000 to date. 
                         Through a phased in approach Health Canada will populate the remaining NOCs for Veterinary drugs from January 1, 1994 to September 18, 2000.</p>
                         <p>This Application Programming Interface (API) allows developers to access that information in JSON and XML format for reuse in their own applications.
-                        The base URI for the Notice of Compliance Database is&nbsp;<a href="https://health-products.canada.ca/api/notice-of-compliance/">https://health-products.canada.ca/api/notice-of-compliance/</a> and you can add parameters to it. Any requests are made relative to this URI.</p>
-                        <p>Information is also available in CSV format, use that URI&nbsp;<a href="https://health-products.canada.ca/api/documentation/noc-dataset-en.html">https://health-products.canada.ca/api/documentation/noc-dataset-en</a> to see the available options.</p>
+                        The base URI for the Notice of Compliance Database is&nbsp;<a href="https://health-products.canada.ca/api/notice-of-compliance/">https://health-products.canada.ca/api/notice-of-compliance/</a> and you can add parameters to it. Any requests are made relative to this URI.</p>                        
                     </section>
                     <!--Drug Product-section-start-->  
                     <section>                        
@@ -272,7 +271,7 @@
                              <h3 id="a2.4">jQuery example</h3>
                              <p>Example of a function that search for drug products given a Notice of Compliance number and language selection:</p>
                              <pre class="prettify prettyprint linenums">function getDrugProduct(id, lang) {
-      var base = 'https://imsd.hres.ca';
+      var base = 'https://health-products.canada.ca';
       var uri = base + '/api/notice-of-compliance/drugproduct/?lang=' + lang + '&id=' + id;
       $.ajax({
               url:uri,
@@ -452,7 +451,7 @@
                              <h3 id="a3.4">jQuery example</h3>
                              <p>Example of a function that search for a Notice of Compliance given a Notice of Compliance number and language selection:</p>
                              <pre class="prettify prettyprint linenums">function GetNoticeOfComplianceMain(id, lang) {
-      var base = 'https://imsd.hres.ca';
+      var base = 'https://health-products.canada.ca';
       var uri = base + '/api/notice-of-compliance/noticeofcompliancemain/?lang=' + lang + '&id=' + id;
       $.ajax({
               url:uri,
@@ -581,7 +580,7 @@
                              <h3 id="a4.4">jQuery example</h3>
                              <p>Example of a function that search for products given a Notice of Compliance number and language selection:</p>
                              <pre class="prettify prettyprint linenums">function getProduct(id, lang) {
-     var base = 'https://imsd.hres.ca';
+     var base = 'https://health-products.canada.ca';
      var uri = base + '/api/notice-of-compliance/product/?lang=' + lang + '&id=' + id;
      $.ajax({
              url:uri,
@@ -706,7 +705,7 @@
                              <h3 id="a4.4">jQuery example</h3>
                              <p>Example of a function that search for dosage forms given a Notice of Compliance number and language selection:</p>
                              <pre class="prettify prettyprint linenums">function getDosageForm(id, lang) {
-     var base = 'https://imsd.hres.ca';
+     var base = 'https://health-products.canada.ca';
      var uri = base + '/api/notice-of-compliance/dosageform/?lang=' + lang + '&id=' + id;
      $.ajax({
              url:uri,
@@ -845,7 +844,7 @@
                              <h3 id="a5.4">jQuery example</h3>
                              <p>Example of a function that search for medicinal ingredients given a Notice of Compliance number and language selection:</p>
                              <pre class="prettify prettyprint linenums">function getMedicinalIngredient(id, lang) {
-      var base = 'https://imsd.hres.ca';
+      var base = 'https://health-products.canada.ca';
       var uri = base + '/api/notice-of-compliance/medicinalingredient/?lang=' + lang + '&id=' + id;
       $.ajax({
               url:uri,
@@ -970,7 +969,7 @@
                              <h3 id="a6.4">jQuery example</h3>
                              <p>Example of a function that search for routes of administration given a Notice of Compliance number and language selection:</p>
                              <pre class="prettify prettyprint linenums">function getRouteAdministration(id, lang) {
-      var base = 'https://imsd.hres.ca';
+      var base = 'https://health-products.canada.ca';
       var uri = base + '/api/notice-of-compliance/route/?lang=' + lang + '&id=' + id;
       $.ajax({
               url:uri,
@@ -1094,7 +1093,7 @@
                              <h3 id="a7.4">jQuery example</h3>
                              <p>Example of a function that search for veterinary species given a Notice of Compliance number and language selection:</p>
                              <pre class="prettify prettyprint linenums">function getVeterinarySpecies(id, lang) {
-      var base = 'https://imsd.hres.ca';
+      var base = 'https://health-products.canada.ca';
       var uri = base + '/api/notice-of-compliance/vetspecies/?lang=' + lang + '&id=' + id;
       $.ajax({
               url:uri,
